--- a/docs/README.template
+++ b/docs/README.template
@@ -8,8 +8,8 @@ $about.description$
 $body$
 
 ----
-> Author: [KhulnaSoft Ltd](https://www.khulnasoft.com/) &bull;
-> Twitter: [@KhulnaSoft](https://twitter.com/khulnasoft)
+> Author: [KhulnaSoft Lab](https://www.khulnasoft.com/) &bull;
+> Twitter: [@AhmadNassri](https://twitter.com/AhmadNassri)
 
 [license-url]: LICENSE
 [license-img]: https://badgen.net/github/license/$about.repository$
