--- a/docs/README.template
+++ b/docs/README.template
@@ -9,7 +9,7 @@ $body$
 
 ----
 > Author: [KhulnaSoft Lab](https://www.khulnasoft.com/) &bull;
-> Twitter: [@AhmadNassri](https://twitter.com/AhmadNassri)
+> Twitter: [@khulnasoft](https://twitter.com/AhmadNassri)
 
 [license-url]: LICENSE
 [license-img]: https://badgen.net/github/license/$about.repository$
